# tauri_ebook_reader

./: .gitignore  index.html  package-lock.json  package.json
docs/: architecture.md
src/: App.jsx  index.html  main.jsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: access.rs  annotations.rs  content.rs  epub.rs  formats.rs  lib.rs  library.rs  main.rs  pagination.rs  settings.rs
src/api/: tauri.js
src/components/: Icon.jsx  Notice.jsx
src/constants/: readableFormats.js
src/features/reader/: AnnotationPanel.jsx  ComicReader.jsx  EpubReader.jsx  HybridCanvasPage.jsx  ReaderView.jsx  SettingsPanel.jsx  TextReader.jsx  TocPanel.jsx  hybridAnnotations.mjs  hybridAnnotations.test.mjs  hybridLayout.js  hybridLayout.test.mjs  pagePosition.mjs  pagePosition.test.mjs  pretextPagination.js  readerAnnotations.mjs  readerAnnotations.test.mjs  readerGeometry.js  readerPaging.mjs  readerPaging.test.mjs  readerPositionCache.mjs  readerPositionCache.test.mjs  readerProgress.mjs  readerProgress.test.mjs  readerToc.js  readerToc.test.mjs  useNativePageControls.js  useNativePageControls.test.mjs
src/features/reader/pdf/: PdfPage.jsx  PdfReader.jsx  pdfJs.js
src/state/: libraryAccess.mjs  libraryAccess.test.mjs  useLibrary.js  useSettings.js
src/styles/: base.css  index.css  layout.css  library.css  reader.css  tokens.css
