[package]
name = "libris-reader"
version = "0.1.0"
description = "Libris Reader - A premium eBook reader"
authors = []
license = ""
repository = ""
default-run = "libris-reader"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "libris-reader"
path = "src/main.rs"

[lib]
name = "libris_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
base64 = "0.22"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.12"
